<resources>
    <string name="app_name">MadLevel3Task1</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="start_title">Welcome to the Games Rating app!</string>
    <string name="start_description">Click START to start rating :)</string>
    <string name="start">Start</string>
    <string name="rating_title">Rate the following game from 1 to 5 stars!</string>
    <string name="game_name">Shadow of the Tomb Raider</string>
    <string name="to_summary">To Summary</string>
    <string name="to_start">Start over</string>
</resources>